[package]
name = "sokoban"
version = "0.1.0"
authors = ["david <davidjf68@gmail.com>"]

[dependencies]
piston_window = "0.117.0"
piston2d-opengl_graphics = "0.42.0"
rand = "0.8.3"
nalgebra = "0.24.1"
[dependencies.pistoncore-glfw_window]
git = "https://github.com/PistonDevelopers/glfw_window"
[dependencies.pistoncore-sdl2_window]
git = "https://github.com/PistonDevelopers/sdl2_window"
